# Mini-microservices-docker-rabbitmq-system

./: .gitignore  README.md  docker-compose.yml  fileSystemHelper.py  makefile  messageBroker.py  pyproject.toml  requirements.txt
analyze_module/: Dockerfile  main.py
controller_module/: Dockerfile  main.py
controller_module/output/: result.json
password_module/: Dockerfile  main.py
