[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Refaelbenzvi24", email = "refaelbenzvi24@gmail.com"},
]
dependencies = [
    "pika>=1.3.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool.pdm.scripts]
"start-controller" = "python controller_module/main.py"
"start-analyze" = "python analyze_module/main.py"
"start-password" = "python password_module/main.py"
"dev" = {composite = [
    "start-controller",
    "start-analyze",
    "start-password",
]}
"docker:build-controller" = "docker build -f controller_module/Dockerfile . -t controller_module"
"docker:build-analyze" = "docker build -f analyze_module/Dockerfile . -t analyze_module"
"docker:build-password" = "docker build -f password_module/Dockerfile . -t password_module"
"docker:build" = {composite = [
    "docker:build-controller",
    "docker:build-analyze",
    "docker:build-password",
]}
"docker:up" = {composite = [
    "docker:build",
    "docker-compose up",
]}
"docker:dev" = "docker-compose up message_broker"